<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="772dp"
        android:background="@drawable/back_svg"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:fontFamily="@font/jua_regular"
            android:text="@string/register_text"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua_regular"
            android:text="Nombre"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:background="@color/design_default_color_background"
            android:hint="@string/email"
            android:textColorHint="@color/design_default_color_background"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.663"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.50"
                android:fontFamily="@font/jua_regular"
                android:inputType="textEmailAddress"
                android:maxLength="42" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua_regular"
            android:text="Apellido"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputLastName"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:background="@color/design_default_color_background"
            android:hint="@string/email"
            android:textColorHint="@color/design_default_color_background"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.663"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.50"
                android:fontFamily="@font/jua_regular"
                android:inputType="textEmailAddress"
                android:maxLength="42" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua_regular"
            android:text="@string/email"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:background="@color/design_default_color_background"
            android:hint="@string/email"
            android:textColorHint="@color/design_default_color_background"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.663"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.50"
                android:fontFamily="@font/jua_regular"
                android:inputType="textEmailAddress"
                android:maxLength="42" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua_regular"
            android:text="@string/password"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_marginBottom="16dp"
            android:background="@color/design_default_color_background"
            android:hint="@string/email"
            android:textColorHint="@color/design_default_color_background"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.663"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.50"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:fontFamily="@font/jua_regular"
                android:inputType="textEmailAddress"
                android:maxLength="42" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua_regular"
            android:text="Repetir Contraseña"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNewPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_marginBottom="16dp"
            android:background="@color/design_default_color_background"
            android:hint="@string/email"
            android:textColorHint="@color/design_default_color_background"
            app:counterEnabled="true"
            app:counterMaxLength="40"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintHorizontal_bias="0.663"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.50"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:fontFamily="@font/jua_regular"
                android:inputType="textEmailAddress"
                android:maxLength="42" />


        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv2"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:fontFamily="@font/jua_regular"
            android:gravity="center"
            android:text="@string/crear_cuenta"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="-6dp"
            tools:layout_editor_absoluteY="262dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonYaTieneCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/jua_regular"
            android:text="@string/ya_tienes_cuenta"
            android:textColor="@color/background" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>